Drawing on Mobile Fixed
Fixed issues with drawing on touch screens causing refreshes and scrolls.

--- a/src/Styling/SASS/MainStyles.scss
+++ b/src/Styling/SASS/MainStyles.scss
@@ -84,6 +84,7 @@ button:active{
 
 form{
     @extend %flex-center;
+    flex-direction: column;
 }
 
 input{
